# AI-Powered-Meal-Planning-Nutrition-Validation-System

./: .env.example  .gitignore  FIXES_APPLIED.md  README.md  example_structured_outputs.py  main.py  pyproject.toml  requirements.txt  run.ps1  setup.ps1  start_a2a_server.py
config/: agents.yaml  tasks.yaml
kroger-mcp/: config.py
mcp-nutrition-tools/src/: mcp_server.py
profiles/: default.json  keto_profile.json  user_profile_template.json  vegan_profile.json
src/: __init__.py  adk_a2a_server.py  adk_agent.py  callbacks.py  crew.py  main.py  models.py  output_handler.py
tools/: __init__.py  mcp_nutrition_tools.py  mcp_tools.py  nutrition_tool.py  recipe_search_tool.py
